examples/test/testpolicy495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy495
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key17: value35
      key14: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value33
      podSelector:
        matchLabels:
          key37: value24
          key34: value4
